Enabled tracking of last access time for bootscript and cloud-init (user-data) resources (#36)
* Enabled tracking of last access time for bootscript and cloud-init (user-data) resources.

* General refactor to change "access" to "endpoint" to clarify what this references.

* Always make sure to give back at least an empty array instead of `null`.

* Added enum to endpoint-history swagger to identify types.
